Added basic HTML skeleton

--- a/index.html
+++ b/index.html
@@ -5,9 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tour Guide</title>
+    <!-- FONTS FROM GOOGLE FONTS -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500&display=swap"
+      rel="stylesheet"
+    />
+    <!-- CUSTOM CSS IMPORT -->
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1>Tour Guide</h1>
+    <!-- ----------------------
+              HEADER SECTION
+    ----------------------- -->
+    <header>
+      <nav></nav>
+    </header>
+
+    <!-- ----------------------
+              MAIN SECTION
+    ----------------------- -->
+    <main>
+      <!-- ----------------------
+              HERO SECTION
+    ----------------------- -->
+      <section></section>
+
+      <!-- ----------------------
+              HIGHLIGHTS SECTION
+    ----------------------- -->
+      <section></section>
+
+      <!-- ----------------------
+              FOOTER SECTION
+    ----------------------- -->
+      <footer></footer>
+    </main>
   </body>
 </html>
