Implemented Header section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <!-- CUSTOM CSS IMPORT -->
+    <link rel="stylesheet" href="css/shared.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -18,7 +19,15 @@
               HEADER SECTION
     ----------------------- -->
     <header>
-      <nav></nav>
+      <div id="page-logo">
+        <a href="./index.html">Travel Goals</a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="./destinations.html">Destinations</a></li>
+          <li><a href="#">About Us</a></li>
+        </ul>
+      </nav>
     </header>
 
     <!-- ----------------------
@@ -28,12 +37,18 @@
       <!-- ----------------------
               HERO SECTION
     ----------------------- -->
-      <section></section>
+      <section id="hero">
+        <div id="hero-content">
+          <h1>My Travel Diary</h1>
+          <p>Explore the world with me!</p>
+          <a href="./destinations.html">Let's Go</a>
+        </div>
+      </section>
 
       <!-- ----------------------
               HIGHLIGHTS SECTION
     ----------------------- -->
-      <section></section>
+      <section id="highlights"></section>
 
       <!-- ----------------------
               FOOTER SECTION
