Added Highlights section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,46 @@
       <!-- ----------------------
               HIGHLIGHTS SECTION
     ----------------------- -->
-      <section id="highlights"></section>
+      <section id="highlights">
+        <!-- HIGHLIGHTS TITLE -->
+        <h2 clas="highlights-title">Highlights</h2>
+        <!-- HIGHLIGHTS GALLERY -->
+        <section class="highlights-gallery">
+          <!-- GALLERY ITEM 1 -->
+          <div class="highlights-gallery-item">
+            <div class="highlights-img-container">
+              <img
+                class="highlights-img"
+                src="./images/places/miami.jpeg"
+                alt="Miami, United States of America"
+              />
+            </div>
+            <p>Miami <span>USA</span></p>
+          </div>
+          <!-- GALLERY ITEM 2 -->
+          <div class="highlights-gallery-item">
+            <div class="highlights-img-container">
+              <img
+                class="highlights-img"
+                src="./images/places/munich.jpeg"
+                alt="Munich, Germany"
+              />
+            </div>
+            <p>Munich <span>Germany</span></p>
+          </div>
+          <!-- GALLERY ITEM 1 -->
+          <div class="highlights-gallery-item">
+            <div class="highlights-img-container">
+              <img
+                class="highlights-img"
+                src="./images/places/barcelona.jpeg"
+                alt="Barcelona, Spain"
+              />
+            </div>
+            <p>Barcelona <span>Spain</span></p>
+          </div>
+        </section>
+      </section>
 
       <!-- ----------------------
               FOOTER SECTION
