--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tour Guide</title>
+    <!-- FONT AWESOME IMPORT -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- FONTS FROM GOOGLE FONTS -->
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500&display=swap"
@@ -92,7 +100,28 @@
       <!-- ----------------------
               FOOTER SECTION
     ----------------------- -->
-      <footer></footer>
+      <footer id="footer">
+        <!-- SOCIAL ICONS -->
+        <ul class="footer-social-links">
+          <li class="footer-social-link">
+            <a href="#">
+              <i class="fab fa-instagram social-icon"></i>
+            </a>
+          </li>
+          <li class="footer-social-link">
+            <a href="#">
+              <i class="fab fa-foursquare social-icon"></i>
+            </a>
+          </li>
+          <li class="footer-social-link">
+            <a href="#">
+              <i class="fab fa-facebook-square social-icon"></i>
+            </a>
+          </li>
+        </ul>
+        <!-- COPYRIGHT -->
+        <div>&copy; <span class="copyright-year"></span> Gagan Singh Inc.</div>
+      </footer>
     </main>
   </body>
 </html>
