Implemented JavaScript to always get and display the current year in the Footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tour Guide</title>
+    <title>HOME | Tour Guide</title>
     <!-- FONT AWESOME IMPORT -->
     <link
       rel="stylesheet"
@@ -121,7 +121,9 @@
         </li>
       </ul>
       <!-- COPYRIGHT -->
-      <div>&copy; <span class="copyright-year"></span> Gagan Singh Inc.</div>
+      <div>&copy; <span id="copyright-year"></span> Gagan Singh Inc.</div>
     </footer>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
