Added single card in Destination section & applied static positionig to Header

--- a/destinations.html
+++ b/destinations.html
@@ -41,7 +41,31 @@
     <!-- ----------------------
               MAIN SECTION
     ----------------------- -->
-    <main></main>
+    <main>
+      <!-- ----------------------
+                DESTINATION CARDS SECTION
+      ----------------------- -->
+      <section>
+        <ul>
+          <!-- SINGLE DESTINATION CARD -->
+          <li>
+            <img src="./images/places/barcelona.jpeg" alt="Barcelona, Spain" />
+            <div class="item-content">
+              <h2>Barcelona</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                voluptatum provident facilis cumque quisquam, reprehenderit ad
+                cum quibusdam molestias dicta totam inventore fugit? Sed laborum
+                explicabo eligendi voluptas! Quia, molestiae!
+              </p>
+            </div>
+            <div class="actions">
+              <a href="#" target="_blank">Explore</a>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </main>
 
     <!-- ----------------------
             FOOTER SECTION
