Added cards for all locations & created a grid

--- a/destinations.html
+++ b/destinations.html
@@ -45,7 +45,7 @@
       <!-- ----------------------
                 DESTINATION CARDS SECTION
       ----------------------- -->
-      <section>
+      <section id="destinations">
         <ul>
           <!-- SINGLE DESTINATION CARD -->
           <li>
@@ -58,9 +58,168 @@
                 cum quibusdam molestias dicta totam inventore fugit? Sed laborum
                 explicabo eligendi voluptas! Quia, molestiae!
               </p>
+              <div class="actions">
+                <a href="#" target="_blank">Explore &#8594;</a>
+              </div>
             </div>
-            <div class="actions">
-              <a href="#" target="_blank">Explore</a>
+          </li>
+          <!-- SINGLE DESTINATION CARD -->
+          <li>
+            <img src="./images/places/miami.jpeg" alt="Miami, USA" />
+            <div class="item-content">
+              <h2>Miami</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                voluptatum provident facilis cumque quisquam, reprehenderit ad
+                cum quibusdam molestias dicta totam inventore fugit? Sed laborum
+                explicabo eligendi voluptas! Quia, molestiae!
+              </p>
+              <div class="actions">
+                <a href="#" target="_blank">Explore &#8594;</a>
+              </div>
+            </div>
+          </li>
+          <!-- SINGLE DESTINATION CARD -->
+          <li>
+            <img src="./images/places/munich.jpeg" alt="Munich, Germany" />
+            <div class="item-content">
+              <h2>Munich</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                voluptatum provident facilis cumque quisquam, reprehenderit ad
+                cum quibusdam molestias dicta totam inventore fugit? Sed laborum
+                explicabo eligendi voluptas! Quia, molestiae!
+              </p>
+              <div class="actions">
+                <a href="#" target="_blank">Explore &#8594;</a>
+              </div>
+            </div>
+          </li>
+          <!-- SINGLE DESTINATION CARD -->
+          <li>
+            <img src="./images/places/fuji.jpeg" alt="Mt. Fuji, Japan" />
+            <div class="item-content">
+              <h2>Mt. Fuji</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                voluptatum provident facilis cumque quisquam, reprehenderit ad
+                cum quibusdam molestias dicta totam inventore fugit? Sed laborum
+                explicabo eligendi voluptas! Quia, molestiae!
+              </p>
+              <div class="actions">
+                <a href="#" target="_blank">Explore &#8594;</a>
+              </div>
+            </div>
+          </li>
+          <!-- SINGLE DESTINATION CARD -->
+          <li>
+            <img
+              src="./images/places/lakelouise.jpeg"
+              alt="Lake Louise, Canada"
+            />
+            <div class="item-content">
+              <h2>Lake Louise</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                voluptatum provident facilis cumque quisquam, reprehenderit ad
+                cum quibusdam molestias dicta totam inventore fugit? Sed laborum
+                explicabo eligendi voluptas! Quia, molestiae!
+              </p>
+              <div class="actions">
+                <a href="#" target="_blank">Explore &#8594;</a>
+              </div>
+            </div>
+          </li>
+          <!-- SINGLE DESTINATION CARD -->
+          <li>
+            <img
+              src="./images/places/niagara.jpeg"
+              alt="Niagara Falls, Canada"
+            />
+            <div class="item-content">
+              <h2>Niagara Falls</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                voluptatum provident facilis cumque quisquam, reprehenderit ad
+                cum quibusdam molestias dicta totam inventore fugit? Sed laborum
+                explicabo eligendi voluptas! Quia, molestiae!
+              </p>
+              <div class="actions">
+                <a href="#" target="_blank">Explore &#8594;</a>
+              </div>
+            </div>
+          </li>
+          <!-- SINGLE DESTINATION CARD -->
+          <li>
+            <img
+              src="./images/places/reykjavik.jpeg"
+              alt="Reykjavik, Iceland"
+            />
+            <div class="item-content">
+              <h2>Reykjavik</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                voluptatum provident facilis cumque quisquam, reprehenderit ad
+                cum quibusdam molestias dicta totam inventore fugit? Sed laborum
+                explicabo eligendi voluptas! Quia, molestiae!
+              </p>
+              <div class="actions">
+                <a href="#" target="_blank">Explore &#8594;</a>
+              </div>
+            </div>
+          </li>
+          <!-- SINGLE DESTINATION CARD -->
+          <li>
+            <img
+              src="./images/places/rockymountains.jpeg"
+              alt="Rocky Moyntains, Canada"
+            />
+            <div class="item-content">
+              <h2>Rocky Moyntains</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                voluptatum provident facilis cumque quisquam, reprehenderit ad
+                cum quibusdam molestias dicta totam inventore fugit? Sed laborum
+                explicabo eligendi voluptas! Quia, molestiae!
+              </p>
+              <div class="actions">
+                <a href="#" target="_blank">Explore &#8594;</a>
+              </div>
+            </div>
+          </li>
+          <!-- SINGLE DESTINATION CARD -->
+          <li>
+            <img src="./images/places/venice.jpeg" alt="Venice, Italy" />
+            <div class="item-content">
+              <h2>Venice</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                voluptatum provident facilis cumque quisquam, reprehenderit ad
+                cum quibusdam molestias dicta totam inventore fugit? Sed laborum
+                explicabo eligendi voluptas! Quia, molestiae!
+              </p>
+              <div class="actions">
+                <a href="#" target="_blank">Explore &#8594;</a>
+              </div>
+            </div>
+          </li>
+          <!-- SINGLE DESTINATION CARD -->
+          <li>
+            <img
+              src="./images/places/yellowstone.jpeg"
+              alt="Yellowstone National Park, USA"
+            />
+            <div class="item-content">
+              <h2>Yellowstone National Park</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+                voluptatum provident facilis cumque quisquam, reprehenderit ad
+                cum quibusdam molestias dicta totam inventore fugit? Sed laborum
+                explicabo eligendi voluptas! Quia, molestiae!
+              </p>
+              <div class="actions">
+                <a href="#" target="_blank">Explore &#8594;</a>
+              </div>
             </div>
           </li>
         </ul>
